--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,21 @@ env:
   - secure: OPka1kcKQuWnfZHzPe8bUxOHF4fPI69J9h4bPy95Omg/IrFrvGHPuhpNWRvz2GbGTu9hcN8s2POlBoFAKBk2DFJtNLgORJrll1c/N1+OWEBmfnpaxyp5V8JmcxqISJDwPA4MD5Os+ezzMN2/VXsTaImqnHd43nY4+3K8L1o4WD8=
   - secure: N2eLGAMFSWFHgba6i9AW7agX6sIn/fWeF6ELWceTSwUi8ZN18tQqtUgcOGnlLJZPI5mHrqyAMSynxVh81ITaaSHdqRYLMyXnq2yGEG6UC9Ptw3OPf8DgyuDG9bbvMHsEtatJPy7iA1Ltn5KpZmVOkHy+1+BEoOG2G0TyaHpJJXE=
 deploy:
-  provider: bintray
-  file: ".travis/bintray.json"
-  user: "$BINTRAY_USER"
-  key: "$BINTRAY_API_KEY"
   skip_cleanup: true
-  on:
-    branch: master
+  - provider: bintray
+    file: ".travis/bintray.json"
+    user: "$BINTRAY_USER"
+    key: "$BINTRAY_API_KEY"
+    skip_cleanup: true
+    on:
+      branch: master
+  - provider: releases
+    api_key: "GITHUB OAUTH TOKEN"
+    file:
+      - "README.md"
+      - "target/"
+      - "mauual/"
+      - "postgres/"
+    on:
+      tags: true
+      branch: master
