--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ env:
   - secure: N2eLGAMFSWFHgba6i9AW7agX6sIn/fWeF6ELWceTSwUi8ZN18tQqtUgcOGnlLJZPI5mHrqyAMSynxVh81ITaaSHdqRYLMyXnq2yGEG6UC9Ptw3OPf8DgyuDG9bbvMHsEtatJPy7iA1Ltn5KpZmVOkHy+1+BEoOG2G0TyaHpJJXE=
 
 before_deploy: 
- - "tar cvfz buddycloud-channel-server.tgz target/channelserver-jar-with-dependencies.jar README.md postgres manual"
- - "shasum -a 256 buddycloud-channel-server.tgz  > file.hashes"
+ - "tar cvfz buddycloud-server-java.tgz target/channelserver-jar-with-dependencies.jar README.md postgres manual"
+ - "shasum -a 256 buddycloud-server-java.tgz  > file.hashes"
 deploy:
 - provider: bintray
   file: ".travis/bintray.json"
